welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: '}' expected but integer literal found.
		for{k<-0 2*(to getMondeHauteur()-1)}
                         ^